# EasyWingetManager

./: .gitignore  LICENSE  README.md  analysis_options.yaml  package-lock.json  package.json  pubspec.yaml
.Jules/: palette.md
.jules/: bolt.md
integration_test/: simple_test.dart
lib/: main.dart
lib/models/: winget_package.dart
lib/providers/: package_provider.dart
lib/services/: winget_service.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
lib/widgets/: package_list_item.dart  package_table.dart  sidebar.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_easy_winget_manager.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_easy_winget_manager.podspec
rust_builder/windows/: CMakeLists.txt
src/: index.html  main.js  preload.js  renderer.js  styles.css
test/: security_check.js  widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
