[package]
name = "rust_lib_easy_winget_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
anyhow = "1.0"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
